data/derived/fa15/progs/unify/prog2183.ml.out
Characters 173-174:
  in (go x)w
         ^
Error: This expression has type int -> int
       but an expression was expected of type int
